# futurama_quote_machine

./: .flake8  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  app.py  config.py  db_model.py  futurama_quote_machine.db  futurama_quotes.txt  get_quotes.py  manage_db.py  model.py  models.py  pyproject.toml  quotes.py  requirements.txt
api/: __init__.py  quotes.py
static/css/: style.css
templates/: index.html
tests/: __init__.py  conftest.py  test_api.py  test_app.py  test_models.py
